# Center-of-mass

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.devcontainer/: devcontainer.json
patches/: README.md  xarm_ros2_gazebo_humble_fixes.patch
scripts/: colcon-build.sh  setup_xarm_ros2.sh
src/assets/models/: bottle_mybottle.urdf  bottle_mybottle_heavy.urdf  cube_1.urdf  cube_1_heavy.urdf  cube_1_large.urdf  cube_2.urdf  cube_2_heavy.urdf  cube_2_large.urdf  parallelepipede.urdf  parallelepipede_large.urdf  xarm7.urdf  xarm7_with_gripper.urdf
src/assets/models/meshes/objects/: cube_1.stl  cube_2.stl
src/com_estimation_pkg/: package.xml  setup.cfg  setup.py
src/com_estimation_pkg/com_estimation_pkg/: __init__.py  analysis.py  calculator.py  noise_model.py  positions.py  robust_estimator.py  visualizer.py
src/real_robot_pkg/: package.xml  setup.py
src/real_robot_pkg/launch/: real_robot.launch.py
src/real_robot_pkg/real_robot_pkg/: __init__.py  arm_mover.py  main.py  torque_reader.py
src/sim_robot_pkg/: package.xml  setup.cfg  setup.py
src/sim_robot_pkg/launch/: sim_world.launch.py
src/sim_robot_pkg/sim_robot_pkg/: __init__.py  bottle_check.py  main.py  pick_place_demo.py  pybullet_world.py
